fixed bugs, regarding files not downloading when download butun was pressed, files are now downloade to local edgehillbox, app now needs  remote delet button and auto refreshing